[gd_scene load_steps=8 format=2]

[ext_resource path="res://art/Finished/character_selector_background.png" type="Texture" id=1]
[ext_resource path="res://CharacterSelector.gd" type="Script" id=2]
[ext_resource path="res://art/Finished/Player/dark_white_skin/middle.png" type="Texture" id=3]
[ext_resource path="res://art/Finished/Player/middle_skin/middle.png" type="Texture" id=4]
[ext_resource path="res://art/Finished/Player/light_black_skin/middle.png" type="Texture" id=5]
[ext_resource path="res://art/Finished/Player/light_white_skin/middle.png" type="Texture" id=6]
[ext_resource path="res://art/Finished/Player/dark_black_skin/middle.png" type="Texture" id=7]

[node name="CharacterSelector" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="Sprite" parent="."]
position = Vector2( 85.3597, 159.695 )
scale = Vector2( 2.05203, 3.55134 )
texture = ExtResource( 1 )

[node name="Back" type="Button" parent="."]
margin_right = 42.0
margin_bottom = 20.0
text = "Back"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Skin" type="Node" parent="."]

[node name="DarkBlack" type="TouchScreenButton" parent="Skin"]
position = Vector2( 0, 40 )
normal = ExtResource( 7 )

[node name="LightBlack" type="TouchScreenButton" parent="Skin"]
position = Vector2( 0, 112 )
normal = ExtResource( 5 )

[node name="Middle" type="TouchScreenButton" parent="Skin"]
position = Vector2( 56, 176 )
normal = ExtResource( 4 )

[node name="DarkWhite" type="TouchScreenButton" parent="Skin"]
position = Vector2( 120, 112 )
normal = ExtResource( 3 )

[node name="LightWhite" type="TouchScreenButton" parent="Skin"]
position = Vector2( 120, 40 )
normal = ExtResource( 6 )

[node name="Hair" type="Node" parent="."]

[node name="Red" type="Button" parent="Hair"]
margin_left = 112.0
margin_top = 240.0
margin_right = 148.0
margin_bottom = 260.0
text = "Red"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Black" type="Button" parent="Hair"]
margin_left = 64.0
margin_top = 192.0
margin_right = 110.0
margin_bottom = 212.0
text = "Black"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Brown" type="Button" parent="Hair"]
margin_top = 192.0
margin_right = 52.0
margin_bottom = 212.0
text = "Brown"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Blonde" type="Button" parent="Hair"]
margin_left = 120.0
margin_top = 192.0
margin_right = 177.0
margin_bottom = 212.0
text = "Blonde"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bald" type="Button" parent="Hair"]
margin_left = 32.0
margin_top = 240.0
margin_right = 72.0
margin_bottom = 260.0
text = "Bald"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TestPlayer" type="Sprite" parent="Hair"]
position = Vector2( 88, 144 )
texture = ExtResource( 4 )
[connection signal="pressed" from="Back" to="." method="_on_Back_pressed"]
[connection signal="pressed" from="Skin/DarkBlack" to="." method="_on_DarkBlack_pressed"]
[connection signal="pressed" from="Skin/LightBlack" to="." method="_on_LightBlack_pressed"]
[connection signal="pressed" from="Skin/Middle" to="." method="_on_Middle_pressed"]
[connection signal="pressed" from="Skin/DarkWhite" to="." method="_on_DarkWhite_pressed"]
[connection signal="pressed" from="Skin/LightWhite" to="." method="_on_LightWhite_pressed"]
[connection signal="pressed" from="Hair/Red" to="." method="_on_Red_pressed"]
[connection signal="pressed" from="Hair/Black" to="." method="_on_Black_pressed"]
[connection signal="pressed" from="Hair/Brown" to="." method="_on_Brown_pressed"]
[connection signal="pressed" from="Hair/Blonde" to="." method="_on_Blonde_pressed"]
[connection signal="pressed" from="Hair/Bald" to="." method="_on_Bald_pressed"]
